package com.japhy.design.t2;

/**
 * @author Japhy
 * @since 2020/11/5 14:59
 */
public enum WeaponType {
    AXE, SWORD, SPEAR, Bow;
}
